--- a/index.html
+++ b/index.html
@@ -20,39 +20,11 @@
 
           <h1 id="project_title">AndroidDevTools</h1>
           <h2 id="project_tagline">Android开发工具</h2>
-<!--<section id="downloads">-->
-              <!--<a class="zip_download_link" href="https://github.com/inferjay/AndroidDevTools/zipball/master">Download this project as a .zip file</a>-->
-              <!--<a class="tar_download_link" href="https://github.com/inferjay/AndroidDevTools/tarball/master">Download this project as a tar.gz file</a>-->
-              <!-- JiaThis Button BEGIN -->
-              <div class="jiathis_style_32x32">
-                  <a class="jiathis_button_tsina"></a>
-                  <a class="jiathis_button_weixin"></a>
-                  <a class="jiathis_button_twitter"></a>
-                  <a class="jiathis_button_fb"></a>
-                  <a class="jiathis_button_googleplus"></a>
-                  <a class="jiathis_button_qzone"></a>
-                  <a href="http://www.jiathis.com/share?uid=1948353" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank"></a>
-                  <a class="jiathis_counter_style"></a>
-              </div>
-              <script type="text/javascript" >
-              var jiathis_config={
-              	data_track_clickback:true,
-              	url:"http://www.androiddevtools.cn",
-              	summary:"最新版Android开发工具 ADT Bundle Android Studio SDK Tools下载 Google Android官方培训课程中文版 Android设计指南非官方简体中文版 Google Material Design 中文版 AndroidDevTools by inferjay",
-              	title:"无需翻墙下载Android开发所需的工具 #Android开发工具#",
-              	ralateuid:{
-              		"tsina":"androiddevtools"
-              	},
-              	shortUrl:false,
-              	hideMore:false
-              }
-              </script>
-              <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1948353" charset="utf-8"></script>
-              <!-- JiaThis Button END -->
 
-		<br>
-              
-            <!--</section>-->
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/inferjay/AndroidDevTools/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/inferjay/AndroidDevTools/tarball/master">Download this project as a tar.gz file</a>
+            </section>
         </header>
     </div>
 
@@ -245,6 +217,9 @@
 </tr>
 </thead>
 <tbody>
+<tr>
+<td align="center"><a href="http://pan.baidu.com/s/1i39UM7j">ADT-23.0.4</a></td>
+</tr>
 <tr>
 <td align="center"><a href="http://pan.baidu.com/s/1hqJyLTi">ADT-23.0.3</a></td>
 </tr>
@@ -1594,6 +1569,12 @@
 <td>APT是一个Android平台高效性能测试组件，<br>提供丰富实用的功能，适用于开发自测、<br>定位性能瓶颈；<br>测试人员完成性能基准测试、竞品对比测试。</td>
 <td align="center"><a href="https://code.csdn.net/Tencent/apt">下载</a></td>
 <td align="center"><a href="http://www.eoeandroid.com/thread-497380-1-1.html">教程</a></td>
+</tr>
+<tr>
+<td align="left">GT</td>
+<td>GT（随身调）是APP的随身调测平台，它是直接运行在手机上的“集成调测环境”(IDTE, Integrated Debug&amp;Test Environment)。</td>
+<td align="center"><a href="http://gt.tencent.com/index.html">下载</a></td>
+<td align="center"><a href="http://gt.tencent.com/docs.html">教程</a></td>
 </tr>
 </tbody>
 </table>
@@ -2954,6 +2935,8 @@
 
 <p>地址：<a href="http://design.1sters.com">http://design.1sters.com</a></p>
 
+<p>地址： <a href="http://www.ui.cn/Material/">http://www.ui.cn/Material/</a></p>
+
 <h4>
 <a name="designers-guide-to-dpi" class="anchor" href="#designers-guide-to-dpi"><span class="octicon octicon-link"></span></a>Designer's Guide To dpi</h4>
 
@@ -2986,6 +2969,12 @@
 
 <p><a href="https://github.com/vhf/free-programming-books/blob/master/free-programming-books.md#android">Free Programming Books</a></p>
 
+<p>一堆免费的Android开发相关的电子书。</p>
+
+<p><a href="http://www.it-ebooks.info/book/2445/">50 Android Hacks</a></p>
+
+<p>50 Android Hacks这本书分12个部分介绍了50个Android开发的小技巧。</p>
+
 <h1>
 <a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h1>
 
@@ -3004,13 +2993,6 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 </code></pre>
-        <hr>
-        <br>
-        <!-- UY BEGIN -->
-        <div id="uyan_frame"></div>
-        <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1948353"></script>
-        <!-- UY END -->
-        <br>
       </section>
     </div>
 
