Modify uyan repeat problem

--- a/index.html
+++ b/index.html
@@ -3791,12 +3791,10 @@ limitations under the License.
 					</div>
 
           <div id="uyan-comment" class="span9">
-								<!-- UY BEGIN -->
-		            <div id="uyan_frame">
-			            <iframe id="uyan_ifr_6163327" scrolling="no" frameborder="0" src="http://api.uyan.cc/v4/comment/?uid=1948353&amp;frameid=6163327&amp;du=&amp;su=www.androiddevtools.cn%2F&amp;pic=&amp;url=http%3A%2F%2Fwww.androiddevtools.cn%2F&amp;title=AndroidDevTools&amp;t=1413136207495" style="display: block !important; width: 100% !important; border: 0px none !important; overflow: hidden !important; height: 1445px;"></iframe>
-		            </div>
-		            <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1948353"></script>
-		            <!-- UY END -->
+            <!-- UY BEGIN -->
+            <div id="uyan_frame"></div>
+            <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1948353"></script>
+            <!-- UY END -->
 						</div>
           </div>
           
