Add ujianVerification info

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>AndroidDevTools</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A powerful image downloading and caching library for Android">
+    <meta name="description" content="无需翻墙下载最新版Android开发工具 ADT Bundle Android Studio SDK Tools">
+    <meta name="ujianVerification" content="ee5a6c5854f1826b3123039d726496c9" />
     <link href="static/bootstrap-combined.min.css" rel="stylesheet">
     <link href="static/app.css" rel="stylesheet">
     <link href="static/app-theme.css" rel="stylesheet">
