Modify some style and Add 161 vector Icons link

--- a/index.html
+++ b/index.html
@@ -3741,6 +3741,9 @@
 
             <p><a href="http://ui-cloud.com">UI Cloun</a>
             </p>
+			
+			<p><a href="https://github.com/nullice/NViconsLib_Silhouette">161个国内外社交网站矢量图标</a>
+            </p>
 
             <h1 id="books-list">
                 <a name="books" class="anchor" href="#books-list">
@@ -3805,6 +3808,7 @@ limitations under the License.
         <footer class="inner">
             <p class="copyright">AndroidDevTools maintained by <a href="https://github.com/inferjay/AndroidDevTools">inferjay</a>
             </p>
+            <p class="modified">Be modified based on <a href="http://square.github.io/picasso/">Picass</a></p>
             <p>Published with <a href="http://pages.github.com">GitHub Pages</a>
             </p>
         </footer>
