Add Prott/Composite/Avocado/Pixate Link

--- a/index.html
+++ b/index.html
@@ -3198,6 +3198,20 @@
                         </td>
                         <td align="center"></td>
                     </tr>
+                    <tr>
+                        <td align="left">Prott</td>
+                        <td></td>
+                        <td align="center"><a href="https://prottapp.com">下载</a>
+                        </td>
+                        <td align="center"></td>
+                    </tr>
+                    <tr>
+                        <td align="left">Composite</td>
+                        <td></td>
+                        <td align="center"><a href="http://www.getcomposite.com/">下载</a>
+                        </td>
+                        <td align="center"></td>
+                    </tr>
                 </tbody>
             </table>
 
@@ -3241,6 +3255,20 @@
                         <td align="left">jQC</td>
                         <td></td>
                         <td align="center"><a href="http://qcdesigners.com/index.php/forums">下载</a>
+                        </td>
+                        <td align="center"></td>
+                    </tr>
+                                        <tr>
+                        <td align="left">Avocado</td>
+                        <td></td>
+                        <td align="center"><a href="https://github.com/ideo/avocado">下载</a>
+                        </td>
+                        <td align="center"></td>
+                    </tr>
+                    <tr>
+                        <td align="left">Pixate</td>
+                        <td></td>
+                        <td align="center"><a href="http://www.pixate.com/">下载</a>
                         </td>
                         <td align="center"></td>
                     </tr>
