Add Material Design Icon set And Material Design UI Kit Link

--- a/index.html
+++ b/index.html
@@ -3813,6 +3813,12 @@
             <p><a href="https://dribbble.com/shots/1617724">Material Design Icon Templates</a>
             </p>
 
+	    <p><a href="https://github.com/google/material-design-icons">Material Design的图标集</a>
+            </p>
+            
+            <p><a href="https://www.behance.net/gallery/20514895/Material-Design-UI-Kit">Material Design UI Kit for Sketch</a>
+            </p>
+
             <p><a href="http://tristanremy.com/nexus-5/">Nexus 5 template for Sketch</a>
             </p>
 
