Add Git And SVN Plugin for Eclipse Link

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 							        <a id="drop-dev-tools" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Android Dev Tools</a>
 							        <ul id="menu-dev-tool" class="dropdown-menu" role="menu" aria-labelledby="drop-dev-tools">
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#gradle">Gradle</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#version-control-tools">版本控制工具</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#apk-decompile-tools">Apk反编译工具</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#security-tools">安全工具</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#eclipse-android-studio-idea-plugin">IDE插件</a></li>
@@ -1426,6 +1427,83 @@
 
             <p><a href="http://gradleplease.appspot.com">Gradle, please</a>
             </p>
+			
+			<h4 id="version-control-tools">
+                <a name="version-control-tools" class="anchor" href="#version-control-tools">
+                    <span class="octicon octicon-link"></span>
+                </a>版本控制工具</h4>
+
+			<h5 id="git">
+                <a name="git" class="anchor" href="#git">
+                    <span class="octicon octicon-link"></span>
+                </a>Git</h5>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th align="center">版本号</th>
+                        <th align="center">Windows</th>
+                        <th align="center">Mac OSX</th>
+                        <th align="center">Linux</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td align="left">Git-2.0.1</td>
+                        <td align="center">
+                        </td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1mgkM9BE">下载</a>
+                        </td>
+                        <td align="center"><a href="https://github.com/inferjay/AndroidDevTools/wiki/Download-for-Linux-and-Unix">下载</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td align="left">Git-1.9.4</td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1ntjy9N7">下载</a>
+                        </td>
+                        <td align="center">
+                        </td>
+                        <td align="center"><a href="https://github.com/inferjay/AndroidDevTools/wiki/Download-for-Linux-and-Unix">下载</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td align="left">Git-1.8.5.2</td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1ntJWxeD">下载</a>
+                        </td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1bncr1pX">下载</a>
+                        </td>
+                        <td align="center"><a href="https://github.com/inferjay/AndroidDevTools/wiki/Download-for-Linux-and-Unix">下载</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+			<h4 id="svn-plugin-for-eclipse">
+                <a name="svn-plugin-for-eclipse" class="anchor" href="#svn-plugin-for-eclipse">
+                    <span class="octicon octicon-link"></span>
+                </a>SVN Plugin For Eclipse</h4>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th align="left">版本号</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td align="left"><a href="http://pan.baidu.com/s/1mg2x4Xq">1.10.5</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td align="left"><a href="http://pan.baidu.com/s/1hqswoGs">1.8.22</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td align="left"><a href="http://pan.baidu.com/s/1o60r6UA">1.6.18</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
             <h4 id="apk-decompile-tools">
                 <a name="%E5%8F%8D%E7%BC%96%E8%AF%91%E5%B7%A5%E5%85%B7" class="anchor" href="#apk-decompile-tools">
