Add Build tools link to androiddevtools.cn

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 							          <li role="presentation"><a role="menuitem" tabindex="0" href="#android-studio">Android Studio</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="1" href="#adt-plugin">ADT Plugin</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="2" href="#sdk-tools">SDK Tools</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="2" href="#build-tools">Build Tools</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="3" href="#sdk-list">SDK</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#ndk">NDK</a></li>
 							          <li role="presentation"><a role="menuitem" tabindex="-1" href="#jdk">JDK</a></li>
@@ -525,6 +526,88 @@
 		  </p>
 	    </blockquote>
 	    
+	    <h4>
+		<a id="build-tools" class="anchor" href="#build-tools" aria-hidden="true"><span class="octicon octicon-link"></span></a>Build-Tools</h4>
+		<p>这是Android开发所需的Build-Tools，下载并解压后，将解压出的整个文件夹复制或者移动到 <code>your sdk 路径/build-tools</code> 文件夹即可。</p>
+		<table>
+		<thead>
+		<tr>
+		<th align="center">版本号</th>
+		<th align="center">Windows</th>
+		<th align="center">Mac OSX</th>
+		<th align="center">Linux</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr>
+		<td align="center">21.1.1</td>
+		<td align="center"><a href="http://pan.baidu.com/s/1mgzFXW0">下载</a></td>
+		<td align="center"><a href="http://pan.baidu.com/s/1i367FTz">下载</a></td>
+		<td align="center"></td>
+		</tr>
+		<tr>
+		<td align="center">21.1.0</td>
+		<td align="center"><a href="http://pan.baidu.com/s/1pJ3DCGN">下载</a></td>
+		<td align="center"><a href="http://pan.baidu.com/s/1hqIfeCW">下载</a></td>
+		<td align="center"></td>
+		</tr>
+		<tr>
+		<td align="center">21.0.2</td>
+		<td align="center"><a href="http://pan.baidu.com/s/1kTDpnt9">下载</a></td>
+		<td align="center"><a href="http://pan.baidu.com/s/1dDCf9TZ">下载</a></td>
+		<td align="center"></td>
+		</tr>
+		<tr>
+		<td align="center">21.0.1</td>
+		<td align="center"><a href="http://pan.baidu.com/s/1eQreI6A">下载</a></td>
+		<td align="center"><a href="http://pan.baidu.com/s/1eQCd5YE">下载</a></td>
+		<td align="center"></td>
+		</tr>
+		<tr>
+		<td align="center">21.0.0</td>
+		<td align="center"><a href="http://pan.baidu.com/s/1i3y0mKd">下载</a></td>
+		<td align="center"><a href="http://pan.baidu.com/s/1i3oWM01">下载</a></td>
+		<td align="center"></td>
+		</tr>
+		<tr>
+		<td align="center">20.0.0</td>
+		<td align="center"></td>
+		<td align="center"><a href="http://pan.baidu.com/s/1c0AfIOK">下载</a></td>
+		<td align="center"></td>
+		</tr>
+		<tr>
+		<td align="center">19.1.0</td>
+		<td align="center"><a href="http://pan.baidu.com/s/1qWCzdwC">下载</a></td>
+		<td align="center"><a href="http://pan.baidu.com/s/1nt2vM21">下载</a></td>
+		<td align="center"></td>
+		</tr>
+		<tr>
+		<td align="center">19.0.3</td>
+		<td align="center"><a href="http://pan.baidu.com/s/1qWCzdwC">下载</a></td>
+		<td align="center"><a href="http://pan.baidu.com/s/1hq7VIgG">下载</a></td>
+		<td align="center"></td>
+		</tr>
+		<tr>
+		<td align="center">19.0.2</td>
+		<td align="center"><a href="http://pan.baidu.com/s/1ntl0Qnf">下载</a></td>
+		<td align="center"><a href="http://pan.baidu.com/s/1xY7PO">下载</a></td>
+		<td align="center"></td>
+		</tr>
+		<tr>
+		<td align="center">19.0.1</td>
+		<td align="center"><a href="http://pan.baidu.com/s/1pJ1BJrt">下载</a></td>
+		<td align="center"><a href="http://pan.baidu.com/s/1o65bAwa">下载</a></td>
+		<td align="center"></td>
+		</tr>
+		<tr>
+		<td align="center">19.0.0</td>
+		<td align="center"><a href="http://pan.baidu.com/s/1o6I8NBs">下载</a></td>
+		<td align="center"><a href="http://pan.baidu.com/s/1c0dBDvE">下载</a></td>
+		<td align="center"></td>
+		</tr>
+		</tbody>
+		</table>
+
             <h4 id="sdk-list">
                 <a name="sdk" class="anchor" href="#sdk-list">
                     <span class="octicon octicon-link"></span>
