--- a/index.html
+++ b/index.html
@@ -227,6 +227,15 @@
                 </thead>
                 <tbody>
                    <tr>
+                        <td align="center">0.9.3</td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1o6JoLzc">下载</a>
+                        </td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1o69LsOq">下载</a>
+                        </td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1c0B1Gju">下载</a>
+                        </td>
+                   </tr>
+                   <tr>
                         <td align="center">0.9.2</td>
                         <td align="center"><a href="http://pan.baidu.com/s/1gdzkjgn">下载</a>
                         </td>
