Add Android Studo 1.0 rc for windows link

--- a/index.html
+++ b/index.html
@@ -227,6 +227,15 @@
                 </thead>
                 <tbody>
                    <tr>
+                        <td align="center">1.0 RC</td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1sjsKtIl">下载</a>
+                        </td>
+                        <td align="center"><a href="#">正在上传</a>
+                        </td>
+                        <td align="center"><a href="#">正在上传</a>
+                        </td>
+                   </tr>
+                   <tr>
                         <td align="center">0.9.3</td>
                         <td align="center"><a href="http://pan.baidu.com/s/1o6JoLzc">下载</a>
                         </td>
