--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                         <td align="center">1.0 RC</td>
                         <td align="center"><a href="http://pan.baidu.com/s/1sjsKtIl">下载</a>
                         </td>
-                        <td align="center"><a href="#">正在上传</a>
+                        <td align="center"><a href="http://pan.baidu.com/s/1gdrcRfX">下载</a>
                         </td>
-                        <td align="center"><a href="#">正在上传</a>
+                        <td align="center"><a href="http://pan.baidu.com/s/1sjO82st">下载</a>
                         </td>
                    </tr>
                    <tr>
