Add Android Studio RC2 Link to site

--- a/index.html
+++ b/index.html
@@ -227,7 +227,16 @@
                 </thead>
                 <tbody>
                    <tr>
-                        <td align="center">1.0 RC</td>
+                        <td align="center">1.0 RC2</td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1sjx4rNJ">下载</a>
+                        </td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1eQpJmqI">下载</a>
+                        </td>
+                        <td align="center"><a href="http://pan.baidu.com/s/1ntuUBvN">下载</a>
+                        </td>
+                   </tr>
+                   <tr>
+                        <td align="center">1.0 RC1</td>
                         <td align="center"><a href="http://pan.baidu.com/s/1sjsKtIl">下载</a>
                         </td>
                         <td align="center"><a href="http://pan.baidu.com/s/1gdrcRfX">下载</a>
